@@ -4,37 +4,55 @@ import com.jde.mainserver.main.web.dto.response.MainRegionRecommendResponse;
 import com.jde.mainserver.member.dto.response.MemberRegionResponse;
 import com.jde.mainserver.member.entity.Member;
 import com.jde.mainserver.member.repository.MemberRepository;
+import com.jde.mainserver.restaurants.repository.RestaurantRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class MainRegionRecommendQueryServiceImpl implements MainRegionRecommendQueryService {
 
     private final MemberRepository memberRepository;
+    private final RestaurantRepository restaurantRepository;
 
     @Override
-    @Transactional(readOnly = true)
     public MainRegionRecommendResponse overview(Long memberId) {
-        Member m = memberRepository.findById(memberId)
+        Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new IllegalArgumentException("member not found"));
-        if (m.getRegion() == null) {
-            return new MainRegionRecommendResponse(false, null, Collections.emptyList());
+
+        var region = member.getRegion();
+        if (region == null) {
+            return new MainRegionRecommendResponse(false, null, List.of());
         }
+
+        var p = region.getGeom();
+        double lng = p.getX();
+        double lat = p.getY();
+
+        var page = restaurantRepository.findNearestWithinMeters(
+                lng, lat, 800, org.springframework.data.domain.PageRequest.of(0, 20)
+        );
+
+        var items = page.getContent().stream()
+                .map(r -> new MainRegionRecommendResponse.RestaurantItem(
+                        r.getId(),
+                        r.getName()
+                ))
+                .toList();
+
         return new MainRegionRecommendResponse(
                 true,
-                MemberRegionResponse.of(m.getRegion()),
-                Collections.emptyList()
+                MemberRegionResponse.of(region),
+                items
         );
     }
 
     @Override
-    @Transactional(readOnly = true)
     public MainRegionRecommendResponse recommendations(Long memberId) {
-        // TODO: A안(FK) 또는 B안(ST_DWithin 반경검색)으로 추천 목록 채우기
-        return overview(memberId); // 일단 개요와 동일하게 반환
+        return overview(memberId);
     }
 }
